# Paste-Tool

./: .gitignore  CMakeLists.txt  README.md  app_metadata.h  go.mod  go.sum  paste_tool.c  platform_win32.c  platform_win32.h
.github/workflows/: ci-build.yml  release.yml
cmd/paste-tool/: main.go
cmd/paste-tool-gui/: main.go
core/: CMakeLists.txt  app_core.c  app_core.h  app_metadata.h
installer/: PasteTool.iss
internal/cli/: cli.go  cli_test.go
internal/config/: config.go  config_test.go
internal/core/: paste.go  paste_test.go
internal/gui/: gui.go  hotkey_common.go  hotkey_darwin.go  hotkey_linux.go  hotkey_nocgo.go  hotkey_other.go  hotkey_windows.go
internal/i18n/: i18n.go  i18n_test.go  locale_other.go  locale_windows.go
internal/metadata/: metadata.go
internal/platform/: input_darwin.go  input_darwin_nocgo.go  input_linux.go  input_linux_nocgo.go  input_other.go  input_windows.go  platform.go
internal/update/: update.go  update_test.go
scripts/: build-installer.ps1  package-artifact.ps1  read-app-version.ps1
src/: CMakeLists.txt  HotkeyDialog.cpp  HotkeyDialog.h  PasteApp.cpp  PasteApp.h  UpdateChecker.cpp  UpdateChecker.h  main.cpp
src/platform/: InputSimulator.h  InputSimulatorWin.cpp
